Finished. Fixed minor bugs and added styles.

--- a/drugi_domaci/src/style.css
+++ b/drugi_domaci/src/style.css
@@ -3,3 +3,38 @@
     text-decoration: none;
     margin: auto;
 }
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+
+.button2 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+  }
+
+.button2:hover {
+    background-color: #008CBA;
+    color: white;
+  }
+
+h1 { 
+    color: #0f1473; 
+    font-family: 'Helvetica Neue', sans-serif; 
+    font-size: 55px; 
+    font-weight: bold; 
+    letter-spacing: -1px; 
+    line-height: 1; 
+    text-align: center; 
+}
